--- a/Hile/www/templates/tabsController.html
+++ b/Hile/www/templates/tabsController.html
@@ -1,12 +1,12 @@
 <ion-view title="Tabs Controller">
     <ion-tabs class="tabs-stable tabs-icon-top">
-        <ion-tab title="All homes" icon="ion-android-list" href="#/page2/page4">
+        <ion-tab title="All homes" icon="ion-android-list" href="#/home/allHomes">
             <ion-nav-view name="tab1"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="Add Home" icon="ion-android-add-circle" href="#/page2/page3">
+        <ion-tab title="Add Home" icon="ion-android-add-circle" href="#/home/homeDetails">
             <ion-nav-view name="tab2"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="About Us" icon="ion-ios-cloud" href="#/page2/page6">
+        <ion-tab title="About Us" icon="ion-ios-cloud" href="#/home/aboutUs">
             <ion-nav-view name="tab3"></ion-nav-view>
         </ion-tab>
     </ion-tabs>
