--- a/Hile/www/templates/myHome.html
+++ b/Hile/www/templates/myHome.html
@@ -2,24 +2,109 @@
     <ion-content>
         <div class="hero " style="background-image: url('./img/bg.png');">
             <div class="content">
-                <div class="avatar" style="background-image: url('./img/daenerys.jpg');"></div>
-                <h3><a class="light">Daenerys Targaryen</a></h3>
-                <h4>dragon_mommy</h4>
+                <div class="avatar" style="background-image: url('./img/profile.png');"></div>
+                <h3><a class="light">{{myHomeData.homeDetails.name}}</a></h3>
+                <h4>{{myHomeData.homeDetails.owner_mail}}</h4>
             </div>
         </div>
         <div class="tabs tabs-dark tabs-icon-top static">
-            <a class="tab-item">
-                <i class="icon ion-arrow-graph-up-right"></i> Activity
+            <a class="tab-item" ng-click="showTab('homeDetails')">
+                <i class="icon ion-arrow-graph-up-right"></i> About
             </a>
-            <a class="tab-item">
-                <i class="icon ion-android-people"></i> Friends
+            <a class="tab-item" ng-click="showTab('productList')">
+                <i class="icon ion-android-people"></i> Products
             </a>
-            <a class="tab-item">
-                <i class="icon ion-images"></i> Photos
+            <a class="tab-item" ng-click="showTab('addProduct')">
+                <i class="icon ion-images"></i> Add new product
             </a>
         </div>
-        <h4 class="content padding double-padding-x">Latest Buzz</h4>
-        <!-- <div class="list animate-fade-slide-in-right"> -->
+      <div class="" ng-show="tabOption.homeDetails">
+        <div class="list card">
+
+          <a href="#" class="item item-icon-left">
+            <i class="icon ion-home"></i>
+            {{myHomeData.homeDetails.location.address1}}
+          </a>
+
+          <a href="#" class="item item-icon-left">
+            <i class="icon ion-ios-telephone"></i>
+            {{myHomeData.homeDetails.location.address2}}
+          </a>
+
+          <a href="#" class="item item-icon-left">
+            <i class="icon ion-wifi"></i>
+            {{myHomeData.homeDetails.location.town}}
+          </a>
+
+          <a href="#" class="item item-icon-left">
+            <i class="icon ion-card"></i>
+            {{myHomeData.homeDetails.location.state}}
+          </a>
+          <a href="#" class="item item-icon-left">
+            <i class="icon ion-card"></i>
+            {{myHomeData.homeDetails.location.pincode}}
+          </a>
+
+
+        </div>
+      </div>
+      <div class="" ng-show="tabOption.productList">
+        hello product list
+        <div class="list card" ng-repeat="product in myHomeData.productsData" ui-sref="product({ productData: product , homeData:homeDetails})">
+
+            <div class="item item-avatar">
+              <h2{{product.name}}</h2>
+              <p{{product.category}}</p>
+            </div>
+
+            <div class="item item-body">
+              <img class="full-image" src="delorean.jpg">
+              <p>
+                This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
+                the content is from a card-body consisting of an image and paragraph text. The footer
+                consists of tabs, icons aligned left, within the card-footer.
+              </p>
+              <p>
+                <a href="#" class="subdued">1 Like</a>
+                <a href="#" class="subdued">5 Comments</a>
+              </p>
+            </div>
+
+            <div class="item tabs tabs-secondary tabs-icon-left">
+              <a class="tab-item" href="#">
+                <i class="icon ion-thumbsup"></i>
+                Like
+              </a>
+              <a class="tab-item" href="#">
+                <i class="icon ion-chatbox"></i>
+                Comment
+              </a>
+              <a class="tab-item" href="#">
+                <i class="icon ion-share"></i>
+                Share
+              </a>
+            </div>
+
+        </div>
+
+
+      </div>
+
+      <div class="" ng-show="tabOption.addProduct">
+        hello product entry
+        <!-- <div class="list">
+           <a class="item item-thumbnail-left" href="#" ng-repeat="product in myHome.productList" ui-sref="product({ productData: product })">
+             <img src="{{}}">
+             <h2>{{product.name}}</h2>
+             <p>{{product.rent_rate}}</p>
+             <i class="icon ion-ios-telephone-outline"></i>
+           </a>
+         </div>-->
+      </div>
+
+
+     <!--   <h4 class="content padding double-padding-x">Latest Buzz</h4>
+        &lt;!&ndash; <div class="list animate-fade-slide-in-right"> &ndash;&gt;
         <div class="list">
             <a class="item item-icon-left" href="#">
                 <i class="icon ion-email"></i> Check mail
@@ -27,7 +112,7 @@
             <a class="item item-icon-left item-icon-right" href="#">
                 <i class="icon ion-chatbubble-working"></i> Call Ma
                 <i class="icon ion-ios-telephone-outline"></i>
-            </a>
+            </a>-->
 
         </div>
     </ion-content>
